--- a/PREMISES-dodatkowe zad/index.html
+++ b/PREMISES-dodatkowe zad/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script_refactoring.js"></script>
+    <script src="./script_users.js"></script>
 </body>
 </html>
